bugfix: удалил лишний grid-gap в медиа-запросе у блока elements

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -10,6 +10,5 @@
 @media screen and (min-width: 658px) and (max-width: 1023px) {
   .elements {
     justify-content: space-evenly;
-    grid-gap: 20px 17px;
   }
 }
